--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
   <script src="//code.jquery.com/jquery-1.12.0.min.js"></script>
 <script src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+<link href='https://fonts.googleapis.com/css?family=Lato:400,700' rel='stylesheet' type='text/css'>
     <title>Sample App</title>
   </head>
   <body>
