--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
   <body>
     <div id='root'>
     </div>
-    <script type="text/javascript" src="/public/bundle.js"></script>
+    <script type="text/javascript" src="/static/bundle.js"></script>
   </body>
 </html>
